fix: resolve ifacebox line break on narrow mobile devices - Removed space between .cbi-tooltip-container and adjacent cbi-tooltip-container under Network => interfaces

--- a/.dev/src/media/main.css
+++ b/.dev/src/media/main.css
@@ -811,7 +811,11 @@
 
         & > span {
           @apply space-y-1.5 text-slate-800 max-md:space-y-1 max-md:text-sm max-md:leading-5 dark:text-slate-200;
-          @apply has-[.cbi-tooltip-container]:flex has-[.cbi-tooltip-container]:flex-wrap has-[.cbi-tooltip-container]:items-center has-[.cbi-tooltip-container]:justify-center has-[.cbi-tooltip-container]:gap-2;
+          @apply has-[.cbi-tooltip-container]:flex has-[.cbi-tooltip-container]:flex-wrap has-[.cbi-tooltip-container]:items-center has-[.cbi-tooltip-container]:justify-center;
+
+          .cbi-tooltip-container + .cbi-tooltip-container {
+            @apply ml-2 max-md:ml-1.5;
+          }
 
           .cbi-tooltip {
             @apply delay-200;
